# music_visualizer_android

./: .gitignore  ReadMe.md  build.gradle  gradle.properties  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/assets/: effects.json
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/res/layout/: activity_main.xml  activity_preview.xml  activity_test_spectrum.xml  fragment_effect.xml  fragment_music.xml  item_effect.xml  item_music.xml  layout_bottom_bar.xml  layout_bottom_bar_item.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
audio/: build.gradle
audio/src/main/: AndroidManifest.xml
basic/src/main/: AndroidManifest.xml
docs/: en.md
gradle/wrapper/: gradle-wrapper.properties
graphics/: build.gradle
graphics/src/main/: AndroidManifest.xml
graphics/src/main/assets/fonts/: yahei.fnt
graphics/src/main/assets/shader/: alpha_fs.glsl  alpha_in_position_vs.glsl  base_2d_fs.glsl  base_2d_vs.glsl  blur.glsl  circle_dot_fs.glsl  fix_color_fs.glsl  instance_color_fs.glsl  instance_vs.glsl  ring_color_alpha_fs.glsl  test_shaderit_fs.glsl  tex_color_fs.glsl  uniform_color_alpha_fs.glsl
graphics/src/main/assets/shader/3d/: base_color_fs.glsl  base_cube_tex_fs.glsl  base_vs.glsl  instance_alpha_tex_fs.glsl  instance_model_vs.glsl  light_fs.glsl  (+7 more)
opencv4.5.2/: build.gradle
spectrum/: build.gradle
spectrum/src/main/: AndroidManifest.xml
spectrum/src/main/cpp/: CMakeLists.txt  com.app.spectrum.Spectrum.cpp  filter.cpp  filter.h  filter_factory.h
(+183 files in other folders)
